k8s/07.Ingress/05-1.traefik-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: development
  namespace: traefik-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: development
  template:
    metadata:
      labels:
        app: development
    spec:
      containers:
      - name: development
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: development-svc
  namespace: traefik-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: development
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging
  namespace: traefik-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: staging
  template:
    metadata:
      labels:
        app: staging
    spec:
      containers:
      - name: staging
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: staging-svc
  namespace: traefik-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operation
  namespace: traefik-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: operation
  template:
    metadata:
      labels:
        app: operation
    spec:
      containers:
      - name: operation
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: operation-svc
  namespace: traefik-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: operation
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
  namespace: traefik-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
      - name: application
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: application-svc
  namespace: traefik-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: application
